--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "docker-netlify-cli",
   "version": "1.0.0",
+  "license": "UNLICENSED",
+  "private": true,
   "dependencies": {
     "netlify-cli": "2.54.0"
   }
