--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -17,25 +17,32 @@ jobs:
     name: Build the container image
     runs-on: ubuntu-latest
     steps:
+
       - name: Check out the repository
         uses: actions/checkout@v2.3.2
-      - name: Log in to the GitHub registry
-        run: docker login --password "${{ github.token }}" --username "${{ github.actor }}" docker.pkg.github.com
-      - name: Log in to Docker Hub
-        run: docker login --password "${{ secrets.docker_hub_password }}" --username "${{ secrets.docker_hub_username }}"
+
       - name: Build the container image
-        run: docker image build --file Dockerfile --tag netlify-cli .
-      - name: Tag and push the latest image
+        uses: docker/build-push-action@v1.1.0
+        with:
+          repository: netlify-cli
+
+      - name: Tag and push the image (GitHub)
         if: github.event_name == 'push' || github.event_name == 'release'
-        run: |
-          docker image tag netlify-cli williamjackson/netlify-cli:latest
-          docker image push williamjackson/netlify-cli:latest
-          docker image tag netlify-cli docker.pkg.github.com/${{ github.repository }}/netlify-cli:latest
-          docker image push docker.pkg.github.com/${{ github.repository }}/netlify-cli:latest
-      - name: Tag and push the release image
-        if: github.event_name == 'release'
-        run: |
-          docker image tag netlify-cli williamjackson/netlify-cli:${{ github.event.release.tag_name }}
-          docker image push williamjackson/netlify-cli:${{ github.event.release.tag_name }}
-          docker image tag netlify-cli docker.pkg.github.com/${{ github.repository }}/netlify-cli:${{ github.event.release.tag_name }}
-          docker image push docker.pkg.github.com/${{ github.repository }}/netlify-cli:${{ github.event.release.tag_name }}
+        uses: docker/build-push-action@v1.1.0
+        with:
+          repository: ${{ github.repository }}/netlify-cli
+          registry: docker.pkg.github.com
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
+          tag_with_ref: true
+          add_git_labels: true
+
+      - name: Tag and push the image (Docker Hub)
+        if: github.event_name == 'push' || github.event_name == 'release'
+        uses: docker/build-push-action@v1.1.0
+        with:
+          repository: williamjackson/netlify-cli
+          username: ${{ secrets.docker_hub_username }}
+          password: ${{ secrets.docker_hub_password }}
+          tag_with_ref: true
+          add_git_labels: true
