--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -30,10 +30,10 @@ jobs:
         if: github.event_name == 'push' || github.event_name == 'release'
         uses: docker/build-push-action@v1.1.1
         with:
-          repository: ${{ github.repository }}/netlify-cli
-          registry: docker.pkg.github.com
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
+          repository: ${{ github.repository_owner }}/netlify-cli
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.ghcr_token }}
           tag_with_ref: true
           add_git_labels: true
 
@@ -41,7 +41,7 @@ jobs:
         if: github.event_name == 'push' || github.event_name == 'release'
         uses: docker/build-push-action@v1.1.1
         with:
-          repository: williamjackson/netlify-cli
+          repository: ${{ secrets.docker_hub_username }}/netlify-cli
           username: ${{ secrets.docker_hub_username }}
           password: ${{ secrets.docker_hub_password }}
           tag_with_ref: true
