--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -33,7 +33,7 @@ jobs:
           repository: ${{ github.repository_owner }}/netlify-cli
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.ghcr_token }}
+          password: ${{ github.token }}
           tag_with_ref: true
           add_git_labels: true
 
