--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -4,6 +4,10 @@ updates:
     directory: /
     schedule:
       interval: daily
+    ignore:
+      - dependency-name: node
+        versions:
+          - '20'
   - package-ecosystem: github-actions
     directory: /
     schedule:
