--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -20,23 +20,13 @@ jobs:
 
   build:
     name: Build the container image
+    permissions:
+      packages: write
     runs-on: ubuntu-latest
     steps:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Build the container image
-        uses: docker/build-push-action@v5
-        with:
-          build-args: |
-            BUILDKIT_INLINE_CACHE=1
-          cache-from: |
-            ${{ env.ghcr_image_name }}
-          load: true
-          tags: |
-            ${{ env.ghcr_image_name }}
-            ${{ env.docker_hub_image_name }}
 
       - name: Log in to GitHub container registry
         if: github.event_name == 'push' || github.event_name == 'release'
@@ -53,16 +43,33 @@ jobs:
           password: ${{ secrets.docker_hub_password }}
           username: ${{ secrets.docker_hub_username }}
 
+      - name: Build the container image
+        uses: docker/build-push-action@v5
+        with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: |
+            ${{ env.ghcr_image_name }}:latest
+            ${{ env.docker_hub_image_name }}:latest
+
       - name: Push latest image to registries
         if: github.event_name == 'push'
-        run: |
-          docker image push ${{ env.ghcr_image_name }}
-          docker image push ${{ env.docker_hub_image_name }}
+        uses: docker/build-push-action@v5
+        with:
+          cache-from: type=gha
+          push: true
+          tags: |
+            ${{ env.ghcr_image_name }}:latest
+            ${{ env.docker_hub_image_name }}:latest
 
       - name: Tag and push release image to registries
         if: github.event_name == 'release'
-        run: |
-          docker image tag ${{ env.ghcr_image_name }}:latest ${{ env.ghcr_image_name }}:${{ github.event.release.tag_name }}
-          docker image push ${{ env.ghcr_image_name }}:${{ github.event.release.tag_name }}
-          docker image tag ${{ env.docker_hub_image_name }}:latest ${{ env.docker_hub_image_name }}:${{ github.event.release.tag_name }}
-          docker image push ${{ env.docker_hub_image_name }}:${{ github.event.release.tag_name }}
+        uses: docker/build-push-action@v5
+        with:
+          cache-from: type=gha
+          push: true
+          tags: |
+            ${{ env.ghcr_image_name }}:latest
+            ${{ env.ghcr_image_name }}:${{ github.event.release.tag_name }}
+            ${{ env.docker_hub_image_name }}:latest
+            ${{ env.docker_hub_image_name }}:${{ github.event.release.tag_name }}
