--- a/.github/workflows/build-container-image.yaml
+++ b/.github/workflows/build-container-image.yaml
@@ -13,8 +13,8 @@ on:
   workflow_dispatch:
 
 env:
-  ghcr_image_name: ghcr.io/williamjacksn/netlify-cli
   docker_hub_image_name: williamjackson/netlify-cli
+  ghcr_image_name: ghcr.io/williamjacksn/netlify-cli
 
 jobs:
 
@@ -28,8 +28,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Build the container image
+        uses: docker/build-push-action@v6
+        with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: |
+            ${{ env.docker_hub_image_name }}:latest
+            ${{ env.ghcr_image_name }}:latest
+
       - name: Log in to GitHub container registry
-        if: github.event_name == 'push' || github.event_name == 'release'
+        if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
         uses: docker/login-action@v3
         with:
           password: ${{ github.token }}
@@ -37,39 +46,28 @@ jobs:
           username: ${{ github.actor }}
 
       - name: Log in to Docker Hub
-        if: github.event_name == 'push' || github.event_name == 'release'
+        if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
         uses: docker/login-action@v3
         with:
           password: ${{ secrets.docker_hub_password }}
           username: ${{ secrets.docker_hub_username }}
 
-      - name: Build the container image
-        uses: docker/build-push-action@v6
-        with:
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          tags: |
-            ${{ env.ghcr_image_name }}:latest
-            ${{ env.docker_hub_image_name }}:latest
-
       - name: Push latest image to registries
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' || github.event_name == 'release' || github.event_name == 'workflow_dispatch'
         uses: docker/build-push-action@v6
         with:
           cache-from: type=gha
           push: true
           tags: |
-            ${{ env.ghcr_image_name }}:latest
             ${{ env.docker_hub_image_name }}:latest
+            ${{ env.ghcr_image_name }}:latest
 
-      - name: Tag and push release image to registries
+      - name: Push release image to registries
         if: github.event_name == 'release'
         uses: docker/build-push-action@v6
         with:
           cache-from: type=gha
           push: true
           tags: |
-            ${{ env.ghcr_image_name }}:latest
-            ${{ env.ghcr_image_name }}:${{ github.event.release.tag_name }}
-            ${{ env.docker_hub_image_name }}:latest
             ${{ env.docker_hub_image_name }}:${{ github.event.release.tag_name }}
+            ${{ env.ghcr_image_name }}:${{ github.event.release.tag_name }}
